--- a/Analogy.DataProviders.Extensions.Core/Analogy.DataProviders.Extensions.Core.csproj
+++ b/Analogy.DataProviders.Extensions.Core/Analogy.DataProviders.Extensions.Core.csproj
@@ -1,7 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
-
   <PropertyGroup>
-    <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <IncludeSymbols>true</IncludeSymbols>
@@ -11,30 +9,30 @@
     <StartupObject />
     <AssemblyName>Analogy.DataProviders.Extensions</AssemblyName>
     <RootNamespace>Analogy.DataProviders.Extensions</RootNamespace>
-    <Version>1.0.3.0</Version>
+    <Version>1.0.4</Version>
+    <Authors>Lior Banai</Authors>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Copyright>Lior Banai ©  2020</Copyright>
+    <PackageProjectUrl>https://github.com/Analogy-LogViewer/Analogy.DataProviders.Extensions</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Analogy-LogViewer/Analogy.DataProviders.Extensions</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
-
   <ItemGroup>
     <None Remove="Analogy_logo1.ico" />
   </ItemGroup>
-
   <ItemGroup>
     <Content Include="Analogy_logo1.ico" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Analogy.LogViewer.Interfaces" Version="2.1.8" />
     <PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.0.0">
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="AnalogyColumnsMatcherUC.cs">
       <SubType>UserControl</SubType>
@@ -43,11 +41,9 @@
       <DependentUpon>AnalogyColumnsMatcherUC.cs</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Update="AnalogyColumnsMatcherUC.resx">
       <DependentUpon>AnalogyColumnsMatcherUC.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-
 </Project>
