--- a/Analogy.DataProviders.Extensions.nuspec
+++ b/Analogy.DataProviders.Extensions.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Analogy.DataProviders.Extensions</id>
-    <version>1.0.3.0</version>
+    <version>1.0.4</version>
     <title>Analogy Data Providers additional Functionality</title>
     <authors>Lior Banai</authors>
     <owners>Lior Banai</owners>
@@ -12,21 +12,21 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>additional functionality for Data Providers for Analogy Log Viewer</description>
     <releaseNotes>adding Setting UI interface for .net core 3.0 and .Net FRamework 4.7.2 versions</releaseNotes>
-    <copyright>Copyright 2019 Lior Banai</copyright>
+    <copyright>Copyright 2020 Lior Banai</copyright>
     <tags></tags>
     <dependencies>
       <group targetFramework="net472">
-        <dependency id="Analogy.LogViewer.Interfaces" version="2.1.7.3" />
+        <dependency id="Analogy.LogViewer.Interfaces" version="2.1.8" />
         <dependency id="Newtonsoft.Json" version="12.0.3" />
       </group>
       <group targetFramework="netcoreapp3.0">
-        <dependency id="Analogy.LogViewer.Interfaces" version="2.1.7.3" />
+        <dependency id="Analogy.LogViewer.Interfaces" version="2.1.8" />
         <dependency id="Newtonsoft.Json" version="12.0.3" />
       </group>
     </dependencies>
   </metadata>
   <files>
-    <file src="Analogy.DataProviders.Extensions\bin\Release\Analogy.DataProviders.Extensions.dll" target="lib\net472\Analogy.DataProviders.Extensions.dll" />
+    <file src="Analogy.DataProviders.Extensions\bin\net472\Release\Analogy.DataProviders.Extensions.dll" target="lib\net472\Analogy.DataProviders.Extensions.dll" />
     <file src="Analogy.DataProviders.Extensions.Core\bin\Release\netcoreapp3.0\Analogy.DataProviders.Extensions.dll" target="lib\netcoreapp3.0\Analogy.DataProviders.Extensions.dll" />
     <file src="Analogy.DataProviders.Extensions.Core\bin\Release\netcoreapp3.0\Analogy.DataProviders.Extensions.deps.json" target="lib\netcoreapp3.0\Analogy.DataProviders.Extensions.deps.json" />
     <file src="icon.png" target="" />
