--- a/Analogy.DataProviders.Extensions/Analogy.DataProviders.Extensions.csproj
+++ b/Analogy.DataProviders.Extensions/Analogy.DataProviders.Extensions.csproj
@@ -9,7 +9,7 @@
     <StartupObject />
     <AssemblyName>Analogy.DataProviders.Extensions</AssemblyName>
     <RootNamespace>Analogy.DataProviders.Extensions</RootNamespace>
-    <Version>1.0.4.1</Version>
+    <Version>1.0.4.2</Version>
     <Authors>Lior Banai</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Lior Banai ©  2020</Copyright>
@@ -17,9 +17,15 @@
     <RepositoryUrl>https://github.com/Analogy-LogViewer/Analogy.DataProviders.Extensions</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Analogy_logo1.ico" />
+    <None Include="..\icon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Analogy_logo1.ico" />
