--- a/Analogy.DataProviders.Extensions/Analogy.DataProviders.Extensions.csproj
+++ b/Analogy.DataProviders.Extensions/Analogy.DataProviders.Extensions.csproj
@@ -9,7 +9,7 @@
     <StartupObject />
     <AssemblyName>Analogy.DataProviders.Extensions</AssemblyName>
     <RootNamespace>Analogy.DataProviders.Extensions</RootNamespace>
-    <Version>1.1.2</Version>
+    <Version>1.1.3</Version>
     <Authors>Lior Banai</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Lior Banai © 2020</Copyright>
@@ -21,6 +21,7 @@
     <PackageIconUrl />
     <Description>Extension DLL for data providers for adding UI Functionality (like user settings and others)</Description>
     <PackageReleaseNotes>Add interface for supplying images for  data providers</PackageReleaseNotes>
+    <Company>Analogy.LogViewer</Company>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\icon.png">
@@ -29,7 +30,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Analogy.LogViewer.Interfaces" Version="2.2.3" />
+    <PackageReference Include="Analogy.LogViewer.Interfaces" Version="2.2.5" />
     <PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.0.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
